# openwork

3d_to_quaternion/: CMakeLists.txt  README.md  build.bat
3d_to_quaternion/include/: NetWrap.h
3d_to_quaternion/lib/: jsoncpp_static.lib  uWS.lib
3d_to_quaternion/python/: body_coordinate.h5  coord_transform_utils.py  quaternion_calculation.py
3d_to_quaternion/src/: test_client.cpp  test_server.cpp
sg_filter/: CMakeLists.txt
sg_filter/include/: sg_filter.h
sg_filter/lib/: sg_filter.lib
sg_filter/src/: sg_filter.cpp
